# fsactl

./: .buildinfo  .deepsource.toml  .gitignore  .pre-commit-config.yaml  README.md  app.py  branching_model.html  genindex.html  index.html  license_short.html  mypy.ini  objects.inv  preface.html  pyproject.toml  search.html  searchindex.js  semantic_versioning.html
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docs.yml  release.yml
_sources/: index.rst.txt  preface.rst.txt  semantic_versioning.rst.txt
docs/source/: branching_model.rst  conf.py  index.rst  license_short.rst  preface.rst
fsactl/: __init__.py  addons.py  app.py  downlaod.py  errors.py  install.py  make.py  typing.py  update.py
fsactl/handlers/: git.py  yaml.py
fsactl/workers/: __init__.py  git.py  worker.py
tests/: __init__.py  test_fsactl.py
