[tool.poetry]
name = "fsactl"
version = "0.1.0"
description = "Install and update MSFS2020 addons"
license = "GPL-3.0+"
readme = "README.md"
repository = "https://github.com/MichaelSasser/fsactl"
homepage = "https://michaelsasser.github.io/fsactl/index.html"
documentation = "https://michaelsasser.github.io/fsactl/index.html"
keywords = ['FlightSimulator', 'FS2020', 'MSFS2020', 'Flight', 'Simulator', 'Addon', 'AddonManager']
authors = ["Michael Sasser <Michael@MichaelSasser.org>"]
# Look here for all Classifiers:
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Environment :: Console",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: Simulation",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
# install   semver pyyaml jinja2
python = "^3.9"
semver = "^2.13.0"
PyYaml = "^5.3.1"
Jinja2 = "^2.11.2"
GitPython = "^3.1.11"
coloredlogs = "^14.0"
tabulate = "^0.8.7"
sphinx = { version = "^3.2.1", optional = true }
sphinx_rtd_theme = { version = "^0.5.0", optional = true }
sphinx-autodoc-typehints = { version = "^1.11.1", optional = true }
sphinxcontrib-programoutput = { version = "^0.16", optional = true }

[tool.poetry.extras]
docs = ["sphinx", "sphinx_rtd_theme", "sphinx-autodoc-typehints", "sphinxcontrib-programoutput"]

[tool.poetry.dev-dependencies]
pre-commit = "^2.7.1"
pytest = "^6.1.1"
flake8 = "^3.8.4"
# flake8 = { git = "https://gitlab.com/pycqa/flake8", branch = "master" }
neovim = "^0.3.1"
pydocstyle = "^5.1.1"
pylint = "^2.6"
pycodestyle = "^2.6"
yapf = "^0.30.0"
vulture = "^2.1"
mypy = "^0.790"
python-language-server = { version = "^0.35.1", extras = ["all"] }
black = { version = "*", allow-prereleases = true }
#black = { version = "^5.5.3", extras = ["pyproject"] }
flake8-bugbear = "^20.1.4"

[tool.poetry.scripts]
matrixctl = "fsactl.app:main"

[tool.black]
line-length = 79
include = '\.pyi?$'
# exclude __init__.py because of ordered importing
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''


[tool.isort]
line_length = 79
force_single_line = true
atomic = true
float_to_top = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
skip_glob = ["*/setup.py", "*.rst", "*.md", "*.yaml", "*.txt", "*.yml", "*.lock", "*.toml", "*.ini", "Makefile"]
filter_files = true
known_first_party = "fsactl"
known_third_party = [
    "pytest",
    # "requests",
    "tabulate",
    # "coloredlogs",
    "sphinx_rtd_theme",
    "git",
]

[tool.flake8]
max-line-length = 79
# max-complexity = 12
ignore = "E501"
select = "C,E,F,W,B,B901"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
